# covid-notebook

./: .gitignore  README.md  SECURITY.md  TODOS.md  app.py  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  qa.yml
assets/: header.css  index.js  typography.css
core/: __init__.py  find.py  get.py  process.py
data/: populations.csv
